k8s/base/collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector
  namespace: plateforme-crypto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collector
  template:
    metadata:
      labels:
        app: collector
    spec:
      containers:
        - name: collector
          image: plateforme-crypto-collector
